* Version 0.01 - initial release
* Version 0.02:
	- add dictionary directories selection in settings dialog
	- redesign menus
	- add Oxygen icons
	- add "Save translation" action
	- add pop up window opacity item to settings dialog
	- rename actions
	- add .desktop file
* Version 0.03:
	- fix bug when build fails on x86_64
	- fix categories in .desktop file
	- add option "Show pop up only if modifier pressed" in settings dialog
	- improve selection scanning
	- fix bug with closing window when it must hide
	- setting Qt 4.2 compitibility
	- add russian translation
	- add traditional chinese translation
* Version 0.04
	- add ukrainian translation
	- fix bug when popup window violates from desktop
	- add translations reformater
	- fix bug with "Up" buttons in settings dialog
