@@ -3,6 +3,7 @@
 #include <QApplication>
 #include <QClipboard>
 #include <QDesktopWidget>
+#include <QGridLayout>
 #include <QSettings>
 #include <QTextBrowser>
 #include <QTimer>
@@ -10,13 +11,17 @@
 #include "keyboard.h"
 
 PopupWindow::PopupWindow(DictCore *dict, QWidget *parent)
-        : QWidget(parent, Qt::ToolTip)
+        : QFrame(parent, Qt::ToolTip)
 {
     if (! dict)
         m_dict = new DictCore(this);
     else
         m_dict = dict;
+    setFrameStyle(QFrame::Box);
     translationView = new QTextBrowser(this);
+    QGridLayout *mainLayout = new QGridLayout(this);
+    mainLayout->setMargin(0);
+    mainLayout->addWidget(translationView);
     closeTimer = new QTimer(this);
     connect(closeTimer, SIGNAL(timeout()), SLOT(close()));
     connect(closeTimer, SIGNAL(timeout()), closeTimer, SLOT(stop()));
@@ -28,6 +33,7 @@ PopupWindow::PopupWindow(DictCore *dict, QWidget *parent)
     setShowIfNotFound(config.value("PopupWindow/showIfNotFound", false).toBool());
     setWindowOpacity(config.value("PopupWindow/opacity", 1.0).toDouble());
     m_timeoutBeforeHide = config.value("PopupWindow/timeoutBeforeHide", 300).toInt();
+    m_defaultSize = config.value("PopupWindow/defaultSize", QSize(320, 240)).toSize();
 }
 
 PopupWindow::~PopupWindow()
@@ -38,6 +44,7 @@ PopupWindow::~PopupWindow()
     config.setValue("PopupWindow/showIfNotFound", m_showIfNotFound);
     config.setValue("PopupWindow/opacity", windowOpacity());
     config.setValue("PopupWindow/timeoutBeforeHide", m_timeoutBeforeHide);
+    config.setValue("PopupWindow/defaultSize", m_defaultSize);
 }
 
 void PopupWindow::setScan(bool scan)
@@ -105,7 +112,7 @@ void PopupWindow::xSelectionChanged()
     {
         QString translated = m_dict->translate(m_source, DictCore::Simple | DictCore::Html);
         translationView->setHtml(translated);
-        translationView->adjustSize();
+        resize(m_defaultSize);
 
         QPoint newPosition = cursor().pos() - QPoint(30, 30);
         if (newPosition.x() < 0)
@@ -139,5 +146,15 @@ int PopupWindow::timeoutBeforeHide() const
 void PopupWindow::setTimeoutBeforeHide(int timeoutBeforeHide)
 {
     m_timeoutBeforeHide = timeoutBeforeHide;
+}
+
+const QSize& PopupWindow::defaultSize() const
+{
+    return m_defaultSize;
+}
+
+void PopupWindow::setDefaultSize(const QSize &defaultSize)
+{
+    m_defaultSize = defaultSize;
 }
 
