@@ -20,5 +20,7 @@
 	- add ukrainian translation
 	- fix bug when popup window violates from desktop
 	- add translations reformater
+	- add popup window timeout before hide after mouse over to settings dialog
 	- fix bug with "Up" buttons in settings dialog
-
+	- add popup window default width and height items to settings dialog
+	- change PopupWindow base class from QWidget to QFrame
